--- a/example/s3.s3.1.1.1211.1911.depth.setting.conf
+++ b/example/s3.s3.1.1.1211.1911.depth.setting.conf
@@ -3,8 +3,9 @@ s3.s3.1.hist.0.1.1211.1911	feature_color	black
 s3.s3.1.hist.0.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.0.1.1211.1911	feature_order	1
 s3.s3.1.hist.0.1.1211.1911	pos_feature_label	medium_up
+s3.s3.1.hist.0.1.1211.1911	feature_popup_title	value -> 26.48
 
-s3.s3.1.hist.0.1.1211.1911	feature_height_ratio	32
+s3.s3.1.hist.0.1.1211.1911	feature_height_ratio	32.96
 
 s3.s3.1.hist.0.1.1211.1911	feature_height_unit	percent
 s3.s3.1.hist.0.1.1211.1911	feature_shape	rect
@@ -15,8 +16,9 @@ s3.s3.1.hist.1.1.1211.1911	feature_color	black
 s3.s3.1.hist.1.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.1.1.1211.1911	feature_order	1
 s3.s3.1.hist.1.1.1211.1911	pos_feature_label	medium_up
+s3.s3.1.hist.1.1.1211.1911	feature_popup_title	value -> 23.14
 
-s3.s3.1.hist.1.1.1211.1911	feature_height_ratio	26
+s3.s3.1.hist.1.1.1211.1911	feature_height_ratio	26.28
 
 s3.s3.1.hist.1.1.1211.1911	feature_height_unit	percent
 s3.s3.1.hist.1.1.1211.1911	feature_shape	rect
@@ -27,8 +29,9 @@ s3.s3.1.hist.2.1.1211.1911	feature_color	black
 s3.s3.1.hist.2.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.2.1.1211.1911	feature_order	1
 s3.s3.1.hist.2.1.1211.1911	pos_feature_label	medium_up
+s3.s3.1.hist.2.1.1211.1911	feature_popup_title	value -> 25.21
 
-s3.s3.1.hist.2.1.1211.1911	feature_height_ratio	30
+s3.s3.1.hist.2.1.1211.1911	feature_height_ratio	30.42
 
 s3.s3.1.hist.2.1.1211.1911	feature_height_unit	percent
 s3.s3.1.hist.2.1.1211.1911	feature_shape	rect
@@ -39,8 +42,9 @@ s3.s3.1.hist.3.1.1211.1911	feature_color	black
 s3.s3.1.hist.3.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.3.1.1211.1911	feature_order	1
 s3.s3.1.hist.3.1.1211.1911	pos_feature_label	medium_up
+s3.s3.1.hist.3.1.1211.1911	feature_popup_title	value -> 25.35
 
-s3.s3.1.hist.3.1.1211.1911	feature_height_ratio	30
+s3.s3.1.hist.3.1.1211.1911	feature_height_ratio	30.7
 
 s3.s3.1.hist.3.1.1211.1911	feature_height_unit	percent
 s3.s3.1.hist.3.1.1211.1911	feature_shape	rect
@@ -51,8 +55,9 @@ s3.s3.1.hist.4.1.1211.1911	feature_color	black
 s3.s3.1.hist.4.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.4.1.1211.1911	feature_order	1
 s3.s3.1.hist.4.1.1211.1911	pos_feature_label	medium_up
+s3.s3.1.hist.4.1.1211.1911	feature_popup_title	value -> 21.79
 
-s3.s3.1.hist.4.1.1211.1911	feature_height_ratio	22
+s3.s3.1.hist.4.1.1211.1911	feature_height_ratio	23.58
 
 s3.s3.1.hist.4.1.1211.1911	feature_height_unit	percent
 s3.s3.1.hist.4.1.1211.1911	feature_shape	rect
@@ -63,8 +68,9 @@ s3.s3.1.hist.5.1.1211.1911	feature_color	black
 s3.s3.1.hist.5.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.5.1.1211.1911	feature_order	1
 s3.s3.1.hist.5.1.1211.1911	pos_feature_label	medium_up
+s3.s3.1.hist.5.1.1211.1911	feature_popup_title	value -> 25.38
 
-s3.s3.1.hist.5.1.1211.1911	feature_height_ratio	30
+s3.s3.1.hist.5.1.1211.1911	feature_height_ratio	30.76
 
 s3.s3.1.hist.5.1.1211.1911	feature_height_unit	percent
 s3.s3.1.hist.5.1.1211.1911	feature_shape	rect
@@ -75,8 +81,9 @@ s3.s3.1.hist.6.1.1211.1911	feature_color	black
 s3.s3.1.hist.6.1.1211.1911	feature_opacity	1
 s3.s3.1.hist.6.1.1211.1911	feature_order	1
 s3.s3.1.hist.6.1.1211.1911	pos_feature_label	medium_up
+s3.s3.1.hist.6.1.1211.1911	feature_popup_title	value -> 22.48
 
-s3.s3.1.hist.6.1.1211.1911	feature_height_ratio	24
+s3.s3.1.hist.6.1.1211.1911	feature_height_ratio	24.96
 
 s3.s3.1.hist.6.1.1211.1911	feature_height_unit	percent
 s3.s3.1.hist.6.1.1211.1911	feature_shape	rect
