--- a/example/s3.s3.1.1.711.1111.depth.setting.conf
+++ b/example/s3.s3.1.1.711.1111.depth.setting.conf
@@ -3,8 +3,9 @@ s3.s3.1.hist.0.1.711.1111	feature_color	black
 s3.s3.1.hist.0.1.711.1111	feature_opacity	1
 s3.s3.1.hist.0.1.711.1111	feature_order	1
 s3.s3.1.hist.0.1.711.1111	pos_feature_label	medium_up
+s3.s3.1.hist.0.1.711.1111	feature_popup_title	value -> 25.52
 
-s3.s3.1.hist.0.1.711.1111	feature_height_ratio	30
+s3.s3.1.hist.0.1.711.1111	feature_height_ratio	31.04
 
 s3.s3.1.hist.0.1.711.1111	feature_height_unit	percent
 s3.s3.1.hist.0.1.711.1111	feature_shape	rect
@@ -15,8 +16,9 @@ s3.s3.1.hist.1.1.711.1111	feature_color	black
 s3.s3.1.hist.1.1.711.1111	feature_opacity	1
 s3.s3.1.hist.1.1.711.1111	feature_order	1
 s3.s3.1.hist.1.1.711.1111	pos_feature_label	medium_up
+s3.s3.1.hist.1.1.711.1111	feature_popup_title	value -> 27.6
 
-s3.s3.1.hist.1.1.711.1111	feature_height_ratio	34
+s3.s3.1.hist.1.1.711.1111	feature_height_ratio	35.2
 
 s3.s3.1.hist.1.1.711.1111	feature_height_unit	percent
 s3.s3.1.hist.1.1.711.1111	feature_shape	rect
@@ -27,8 +29,9 @@ s3.s3.1.hist.2.1.711.1111	feature_color	black
 s3.s3.1.hist.2.1.711.1111	feature_opacity	1
 s3.s3.1.hist.2.1.711.1111	feature_order	1
 s3.s3.1.hist.2.1.711.1111	pos_feature_label	medium_up
+s3.s3.1.hist.2.1.711.1111	feature_popup_title	value -> 25.01
 
-s3.s3.1.hist.2.1.711.1111	feature_height_ratio	30
+s3.s3.1.hist.2.1.711.1111	feature_height_ratio	30.02
 
 s3.s3.1.hist.2.1.711.1111	feature_height_unit	percent
 s3.s3.1.hist.2.1.711.1111	feature_shape	rect
@@ -39,8 +42,9 @@ s3.s3.1.hist.3.1.711.1111	feature_color	black
 s3.s3.1.hist.3.1.711.1111	feature_opacity	1
 s3.s3.1.hist.3.1.711.1111	feature_order	1
 s3.s3.1.hist.3.1.711.1111	pos_feature_label	medium_up
+s3.s3.1.hist.3.1.711.1111	feature_popup_title	value -> 26.53
 
-s3.s3.1.hist.3.1.711.1111	feature_height_ratio	32
+s3.s3.1.hist.3.1.711.1111	feature_height_ratio	33.06
 
 s3.s3.1.hist.3.1.711.1111	feature_height_unit	percent
 s3.s3.1.hist.3.1.711.1111	feature_shape	rect
