--- a/example/s3.s3.1.2.11.2010.depth.setting.conf
+++ b/example/s3.s3.1.2.11.2010.depth.setting.conf
@@ -3,8 +3,9 @@ s3.s3.1.hist.0.2.11.2010	feature_color	black
 s3.s3.1.hist.0.2.11.2010	feature_opacity	1
 s3.s3.1.hist.0.2.11.2010	feature_order	1
 s3.s3.1.hist.0.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.0.2.11.2010	feature_popup_title	value -> 23.03
 
-s3.s3.1.hist.0.2.11.2010	feature_height_ratio	13.5
+s3.s3.1.hist.0.2.11.2010	feature_height_ratio	13.635
 
 s3.s3.1.hist.0.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.0.2.11.2010	feature_shape	rect
@@ -15,8 +16,9 @@ s3.s3.1.hist.1.2.11.2010	feature_color	black
 s3.s3.1.hist.1.2.11.2010	feature_opacity	1
 s3.s3.1.hist.1.2.11.2010	feature_order	1
 s3.s3.1.hist.1.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.1.2.11.2010	feature_popup_title	value -> 28.07
 
-s3.s3.1.hist.1.2.11.2010	feature_height_ratio	36
+s3.s3.1.hist.1.2.11.2010	feature_height_ratio	36.315
 
 s3.s3.1.hist.1.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.1.2.11.2010	feature_shape	rect
@@ -27,8 +29,9 @@ s3.s3.1.hist.2.2.11.2010	feature_color	black
 s3.s3.1.hist.2.2.11.2010	feature_opacity	1
 s3.s3.1.hist.2.2.11.2010	feature_order	1
 s3.s3.1.hist.2.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.2.2.11.2010	feature_popup_title	value -> 22.49
 
-s3.s3.1.hist.2.2.11.2010	feature_height_ratio	9
+s3.s3.1.hist.2.2.11.2010	feature_height_ratio	11.205
 
 s3.s3.1.hist.2.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.2.2.11.2010	feature_shape	rect
@@ -39,8 +42,9 @@ s3.s3.1.hist.3.2.11.2010	feature_color	black
 s3.s3.1.hist.3.2.11.2010	feature_opacity	1
 s3.s3.1.hist.3.2.11.2010	feature_order	1
 s3.s3.1.hist.3.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.3.2.11.2010	feature_popup_title	value -> 26.35
 
-s3.s3.1.hist.3.2.11.2010	feature_height_ratio	27
+s3.s3.1.hist.3.2.11.2010	feature_height_ratio	28.575
 
 s3.s3.1.hist.3.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.3.2.11.2010	feature_shape	rect
@@ -51,8 +55,9 @@ s3.s3.1.hist.4.2.11.2010	feature_color	black
 s3.s3.1.hist.4.2.11.2010	feature_opacity	1
 s3.s3.1.hist.4.2.11.2010	feature_order	1
 s3.s3.1.hist.4.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.4.2.11.2010	feature_popup_title	value -> 25.37
 
-s3.s3.1.hist.4.2.11.2010	feature_height_ratio	22.5
+s3.s3.1.hist.4.2.11.2010	feature_height_ratio	24.165
 
 s3.s3.1.hist.4.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.4.2.11.2010	feature_shape	rect
@@ -63,8 +68,9 @@ s3.s3.1.hist.5.2.11.2010	feature_color	black
 s3.s3.1.hist.5.2.11.2010	feature_opacity	1
 s3.s3.1.hist.5.2.11.2010	feature_order	1
 s3.s3.1.hist.5.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.5.2.11.2010	feature_popup_title	value -> 24.76
 
-s3.s3.1.hist.5.2.11.2010	feature_height_ratio	18
+s3.s3.1.hist.5.2.11.2010	feature_height_ratio	21.42
 
 s3.s3.1.hist.5.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.5.2.11.2010	feature_shape	rect
@@ -75,8 +81,9 @@ s3.s3.1.hist.6.2.11.2010	feature_color	black
 s3.s3.1.hist.6.2.11.2010	feature_opacity	1
 s3.s3.1.hist.6.2.11.2010	feature_order	1
 s3.s3.1.hist.6.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.6.2.11.2010	feature_popup_title	value -> 24.17
 
-s3.s3.1.hist.6.2.11.2010	feature_height_ratio	18
+s3.s3.1.hist.6.2.11.2010	feature_height_ratio	18.765
 
 s3.s3.1.hist.6.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.6.2.11.2010	feature_shape	rect
@@ -87,8 +94,9 @@ s3.s3.1.hist.7.2.11.2010	feature_color	black
 s3.s3.1.hist.7.2.11.2010	feature_opacity	1
 s3.s3.1.hist.7.2.11.2010	feature_order	1
 s3.s3.1.hist.7.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.7.2.11.2010	feature_popup_title	value -> 25.52
 
-s3.s3.1.hist.7.2.11.2010	feature_height_ratio	22.5
+s3.s3.1.hist.7.2.11.2010	feature_height_ratio	24.84
 
 s3.s3.1.hist.7.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.7.2.11.2010	feature_shape	rect
@@ -99,8 +107,9 @@ s3.s3.1.hist.8.2.11.2010	feature_color	black
 s3.s3.1.hist.8.2.11.2010	feature_opacity	1
 s3.s3.1.hist.8.2.11.2010	feature_order	1
 s3.s3.1.hist.8.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.8.2.11.2010	feature_popup_title	value -> 27.6
 
-s3.s3.1.hist.8.2.11.2010	feature_height_ratio	31.5
+s3.s3.1.hist.8.2.11.2010	feature_height_ratio	34.2
 
 s3.s3.1.hist.8.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.8.2.11.2010	feature_shape	rect
@@ -111,8 +120,9 @@ s3.s3.1.hist.9.2.11.2010	feature_color	black
 s3.s3.1.hist.9.2.11.2010	feature_opacity	1
 s3.s3.1.hist.9.2.11.2010	feature_order	1
 s3.s3.1.hist.9.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.9.2.11.2010	feature_popup_title	value -> 25.01
 
-s3.s3.1.hist.9.2.11.2010	feature_height_ratio	22.5
+s3.s3.1.hist.9.2.11.2010	feature_height_ratio	22.545
 
 s3.s3.1.hist.9.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.9.2.11.2010	feature_shape	rect
@@ -123,8 +133,9 @@ s3.s3.1.hist.10.2.11.2010	feature_color	black
 s3.s3.1.hist.10.2.11.2010	feature_opacity	1
 s3.s3.1.hist.10.2.11.2010	feature_order	1
 s3.s3.1.hist.10.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.10.2.11.2010	feature_popup_title	value -> 26.53
 
-s3.s3.1.hist.10.2.11.2010	feature_height_ratio	27
+s3.s3.1.hist.10.2.11.2010	feature_height_ratio	29.385
 
 s3.s3.1.hist.10.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.10.2.11.2010	feature_shape	rect
@@ -135,8 +146,9 @@ s3.s3.1.hist.11.2.11.2010	feature_color	black
 s3.s3.1.hist.11.2.11.2010	feature_opacity	1
 s3.s3.1.hist.11.2.11.2010	feature_order	1
 s3.s3.1.hist.11.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.11.2.11.2010	feature_popup_title	value -> 24.09
 
-s3.s3.1.hist.11.2.11.2010	feature_height_ratio	18
+s3.s3.1.hist.11.2.11.2010	feature_height_ratio	18.405
 
 s3.s3.1.hist.11.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.11.2.11.2010	feature_shape	rect
@@ -147,8 +159,9 @@ s3.s3.1.hist.12.2.11.2010	feature_color	black
 s3.s3.1.hist.12.2.11.2010	feature_opacity	1
 s3.s3.1.hist.12.2.11.2010	feature_order	1
 s3.s3.1.hist.12.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.12.2.11.2010	feature_popup_title	value -> 26.48
 
-s3.s3.1.hist.12.2.11.2010	feature_height_ratio	27
+s3.s3.1.hist.12.2.11.2010	feature_height_ratio	29.16
 
 s3.s3.1.hist.12.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.12.2.11.2010	feature_shape	rect
@@ -159,8 +172,9 @@ s3.s3.1.hist.13.2.11.2010	feature_color	black
 s3.s3.1.hist.13.2.11.2010	feature_opacity	1
 s3.s3.1.hist.13.2.11.2010	feature_order	1
 s3.s3.1.hist.13.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.13.2.11.2010	feature_popup_title	value -> 23.14
 
-s3.s3.1.hist.13.2.11.2010	feature_height_ratio	13.5
+s3.s3.1.hist.13.2.11.2010	feature_height_ratio	14.13
 
 s3.s3.1.hist.13.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.13.2.11.2010	feature_shape	rect
@@ -171,8 +185,9 @@ s3.s3.1.hist.14.2.11.2010	feature_color	black
 s3.s3.1.hist.14.2.11.2010	feature_opacity	1
 s3.s3.1.hist.14.2.11.2010	feature_order	1
 s3.s3.1.hist.14.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.14.2.11.2010	feature_popup_title	value -> 25.21
 
-s3.s3.1.hist.14.2.11.2010	feature_height_ratio	22.5
+s3.s3.1.hist.14.2.11.2010	feature_height_ratio	23.445
 
 s3.s3.1.hist.14.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.14.2.11.2010	feature_shape	rect
@@ -183,8 +198,9 @@ s3.s3.1.hist.15.2.11.2010	feature_color	black
 s3.s3.1.hist.15.2.11.2010	feature_opacity	1
 s3.s3.1.hist.15.2.11.2010	feature_order	1
 s3.s3.1.hist.15.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.15.2.11.2010	feature_popup_title	value -> 25.35
 
-s3.s3.1.hist.15.2.11.2010	feature_height_ratio	22.5
+s3.s3.1.hist.15.2.11.2010	feature_height_ratio	24.075
 
 s3.s3.1.hist.15.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.15.2.11.2010	feature_shape	rect
@@ -195,8 +211,9 @@ s3.s3.1.hist.16.2.11.2010	feature_color	black
 s3.s3.1.hist.16.2.11.2010	feature_opacity	1
 s3.s3.1.hist.16.2.11.2010	feature_order	1
 s3.s3.1.hist.16.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.16.2.11.2010	feature_popup_title	value -> 21.79
 
-s3.s3.1.hist.16.2.11.2010	feature_height_ratio	4.5
+s3.s3.1.hist.16.2.11.2010	feature_height_ratio	8.055
 
 s3.s3.1.hist.16.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.16.2.11.2010	feature_shape	rect
@@ -207,8 +224,9 @@ s3.s3.1.hist.17.2.11.2010	feature_color	black
 s3.s3.1.hist.17.2.11.2010	feature_opacity	1
 s3.s3.1.hist.17.2.11.2010	feature_order	1
 s3.s3.1.hist.17.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.17.2.11.2010	feature_popup_title	value -> 25.38
 
-s3.s3.1.hist.17.2.11.2010	feature_height_ratio	22.5
+s3.s3.1.hist.17.2.11.2010	feature_height_ratio	24.21
 
 s3.s3.1.hist.17.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.17.2.11.2010	feature_shape	rect
@@ -219,8 +237,9 @@ s3.s3.1.hist.18.2.11.2010	feature_color	black
 s3.s3.1.hist.18.2.11.2010	feature_opacity	1
 s3.s3.1.hist.18.2.11.2010	feature_order	1
 s3.s3.1.hist.18.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.18.2.11.2010	feature_popup_title	value -> 22.48
 
-s3.s3.1.hist.18.2.11.2010	feature_height_ratio	9
+s3.s3.1.hist.18.2.11.2010	feature_height_ratio	11.16
 
 s3.s3.1.hist.18.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.18.2.11.2010	feature_shape	rect
@@ -231,8 +250,9 @@ s3.s3.1.hist.19.2.11.2010	feature_color	black
 s3.s3.1.hist.19.2.11.2010	feature_opacity	1
 s3.s3.1.hist.19.2.11.2010	feature_order	1
 s3.s3.1.hist.19.2.11.2010	pos_feature_label	medium_up
+s3.s3.1.hist.19.2.11.2010	feature_popup_title	value -> 26.81
 
-s3.s3.1.hist.19.2.11.2010	feature_height_ratio	27
+s3.s3.1.hist.19.2.11.2010	feature_height_ratio	30.645
 
 s3.s3.1.hist.19.2.11.2010	feature_height_unit	percent
 s3.s3.1.hist.19.2.11.2010	feature_shape	rect
