--- a/example/s3.s3.1.1.111.511.depth.setting.conf
+++ b/example/s3.s3.1.1.111.511.depth.setting.conf
@@ -3,8 +3,9 @@ s3.s3.1.hist.0.1.111.511	feature_color	black
 s3.s3.1.hist.0.1.111.511	feature_opacity	1
 s3.s3.1.hist.0.1.111.511	feature_order	1
 s3.s3.1.hist.0.1.111.511	pos_feature_label	medium_up
+s3.s3.1.hist.0.1.111.511	feature_popup_title	value -> 28.07
 
-s3.s3.1.hist.0.1.111.511	feature_height_ratio	36
+s3.s3.1.hist.0.1.111.511	feature_height_ratio	36.14
 
 s3.s3.1.hist.0.1.111.511	feature_height_unit	percent
 s3.s3.1.hist.0.1.111.511	feature_shape	rect
@@ -15,8 +16,9 @@ s3.s3.1.hist.1.1.111.511	feature_color	black
 s3.s3.1.hist.1.1.111.511	feature_opacity	1
 s3.s3.1.hist.1.1.111.511	feature_order	1
 s3.s3.1.hist.1.1.111.511	pos_feature_label	medium_up
+s3.s3.1.hist.1.1.111.511	feature_popup_title	value -> 22.49
 
-s3.s3.1.hist.1.1.111.511	feature_height_ratio	24
+s3.s3.1.hist.1.1.111.511	feature_height_ratio	24.98
 
 s3.s3.1.hist.1.1.111.511	feature_height_unit	percent
 s3.s3.1.hist.1.1.111.511	feature_shape	rect
@@ -27,8 +29,9 @@ s3.s3.1.hist.2.1.111.511	feature_color	black
 s3.s3.1.hist.2.1.111.511	feature_opacity	1
 s3.s3.1.hist.2.1.111.511	feature_order	1
 s3.s3.1.hist.2.1.111.511	pos_feature_label	medium_up
+s3.s3.1.hist.2.1.111.511	feature_popup_title	value -> 26.35
 
-s3.s3.1.hist.2.1.111.511	feature_height_ratio	32
+s3.s3.1.hist.2.1.111.511	feature_height_ratio	32.7
 
 s3.s3.1.hist.2.1.111.511	feature_height_unit	percent
 s3.s3.1.hist.2.1.111.511	feature_shape	rect
@@ -39,8 +42,9 @@ s3.s3.1.hist.3.1.111.511	feature_color	black
 s3.s3.1.hist.3.1.111.511	feature_opacity	1
 s3.s3.1.hist.3.1.111.511	feature_order	1
 s3.s3.1.hist.3.1.111.511	pos_feature_label	medium_up
+s3.s3.1.hist.3.1.111.511	feature_popup_title	value -> 25.37
 
-s3.s3.1.hist.3.1.111.511	feature_height_ratio	30
+s3.s3.1.hist.3.1.111.511	feature_height_ratio	30.74
 
 s3.s3.1.hist.3.1.111.511	feature_height_unit	percent
 s3.s3.1.hist.3.1.111.511	feature_shape	rect
