--- a/example/s3.s3.2.3.2020.5000.depth.setting.conf
+++ b/example/s3.s3.2.3.2020.5000.depth.setting.conf
@@ -3,8 +3,9 @@ s3.s3.2.hist.0.3.2020.5000	feature_color	black
 s3.s3.2.hist.0.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.0.3.2020.5000	feature_order	1
 s3.s3.2.hist.0.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.0.3.2020.5000	feature_popup_title	value -> 24.85
 
-s3.s3.2.hist.0.3.2020.5000	feature_height_ratio	38
+s3.s3.2.hist.0.3.2020.5000	feature_height_ratio	46.075
 
 s3.s3.2.hist.0.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.0.3.2020.5000	feature_shape	rect
@@ -15,8 +16,9 @@ s3.s3.2.hist.1.3.2020.5000	feature_color	black
 s3.s3.2.hist.1.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.1.3.2020.5000	feature_order	1
 s3.s3.2.hist.1.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.1.3.2020.5000	feature_popup_title	value -> 24.16
 
-s3.s3.2.hist.1.3.2020.5000	feature_height_ratio	38
+s3.s3.2.hist.1.3.2020.5000	feature_height_ratio	39.52
 
 s3.s3.2.hist.1.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.1.3.2020.5000	feature_shape	rect
@@ -27,8 +29,9 @@ s3.s3.2.hist.2.3.2020.5000	feature_color	black
 s3.s3.2.hist.2.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.2.3.2020.5000	feature_order	1
 s3.s3.2.hist.2.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.2.3.2020.5000	feature_popup_title	value -> 26.85
 
-s3.s3.2.hist.2.3.2020.5000	feature_height_ratio	57
+s3.s3.2.hist.2.3.2020.5000	feature_height_ratio	65.075
 
 s3.s3.2.hist.2.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.2.3.2020.5000	feature_shape	rect
@@ -39,8 +42,9 @@ s3.s3.2.hist.3.3.2020.5000	feature_color	black
 s3.s3.2.hist.3.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.3.3.2020.5000	feature_order	1
 s3.s3.2.hist.3.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.3.3.2020.5000	feature_popup_title	value -> 27.17
 
-s3.s3.2.hist.3.3.2020.5000	feature_height_ratio	66.5
+s3.s3.2.hist.3.3.2020.5000	feature_height_ratio	68.115
 
 s3.s3.2.hist.3.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.3.3.2020.5000	feature_shape	rect
@@ -51,8 +55,9 @@ s3.s3.2.hist.4.3.2020.5000	feature_color	black
 s3.s3.2.hist.4.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.4.3.2020.5000	feature_order	1
 s3.s3.2.hist.4.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.4.3.2020.5000	feature_popup_title	value -> 24.66
 
-s3.s3.2.hist.4.3.2020.5000	feature_height_ratio	38
+s3.s3.2.hist.4.3.2020.5000	feature_height_ratio	44.27
 
 s3.s3.2.hist.4.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.4.3.2020.5000	feature_shape	rect
@@ -63,8 +68,9 @@ s3.s3.2.hist.5.3.2020.5000	feature_color	black
 s3.s3.2.hist.5.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.5.3.2020.5000	feature_order	1
 s3.s3.2.hist.5.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.5.3.2020.5000	feature_popup_title	value -> 27.09
 
-s3.s3.2.hist.5.3.2020.5000	feature_height_ratio	66.5
+s3.s3.2.hist.5.3.2020.5000	feature_height_ratio	67.355
 
 s3.s3.2.hist.5.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.5.3.2020.5000	feature_shape	rect
@@ -75,8 +81,9 @@ s3.s3.2.hist.6.3.2020.5000	feature_color	black
 s3.s3.2.hist.6.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.6.3.2020.5000	feature_order	1
 s3.s3.2.hist.6.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.6.3.2020.5000	feature_popup_title	value -> 23.72
 
-s3.s3.2.hist.6.3.2020.5000	feature_height_ratio	28.5
+s3.s3.2.hist.6.3.2020.5000	feature_height_ratio	35.34
 
 s3.s3.2.hist.6.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.6.3.2020.5000	feature_shape	rect
@@ -87,8 +94,9 @@ s3.s3.2.hist.7.3.2020.5000	feature_color	black
 s3.s3.2.hist.7.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.7.3.2020.5000	feature_order	1
 s3.s3.2.hist.7.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.7.3.2020.5000	feature_popup_title	value -> 29.1
 
-s3.s3.2.hist.7.3.2020.5000	feature_height_ratio	85.5
+s3.s3.2.hist.7.3.2020.5000	feature_height_ratio	86.45
 
 s3.s3.2.hist.7.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.7.3.2020.5000	feature_shape	rect
@@ -99,8 +107,9 @@ s3.s3.2.hist.8.3.2020.5000	feature_color	black
 s3.s3.2.hist.8.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.8.3.2020.5000	feature_order	1
 s3.s3.2.hist.8.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.8.3.2020.5000	feature_popup_title	value -> 25.39
 
-s3.s3.2.hist.8.3.2020.5000	feature_height_ratio	47.5
+s3.s3.2.hist.8.3.2020.5000	feature_height_ratio	51.205
 
 s3.s3.2.hist.8.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.8.3.2020.5000	feature_shape	rect
@@ -111,8 +120,9 @@ s3.s3.2.hist.9.3.2020.5000	feature_color	black
 s3.s3.2.hist.9.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.9.3.2020.5000	feature_order	1
 s3.s3.2.hist.9.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.9.3.2020.5000	feature_popup_title	value -> 27.14
 
-s3.s3.2.hist.9.3.2020.5000	feature_height_ratio	66.5
+s3.s3.2.hist.9.3.2020.5000	feature_height_ratio	67.83
 
 s3.s3.2.hist.9.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.9.3.2020.5000	feature_shape	rect
@@ -123,8 +133,9 @@ s3.s3.2.hist.10.3.2020.5000	feature_color	black
 s3.s3.2.hist.10.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.10.3.2020.5000	feature_order	1
 s3.s3.2.hist.10.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.10.3.2020.5000	feature_popup_title	value -> 27.7
 
-s3.s3.2.hist.10.3.2020.5000	feature_height_ratio	66.5
+s3.s3.2.hist.10.3.2020.5000	feature_height_ratio	73.15
 
 s3.s3.2.hist.10.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.10.3.2020.5000	feature_shape	rect
@@ -135,8 +146,9 @@ s3.s3.2.hist.11.3.2020.5000	feature_color	black
 s3.s3.2.hist.11.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.11.3.2020.5000	feature_order	1
 s3.s3.2.hist.11.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.11.3.2020.5000	feature_popup_title	value -> 25.51
 
-s3.s3.2.hist.11.3.2020.5000	feature_height_ratio	47.5
+s3.s3.2.hist.11.3.2020.5000	feature_height_ratio	52.345
 
 s3.s3.2.hist.11.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.11.3.2020.5000	feature_shape	rect
@@ -147,8 +159,9 @@ s3.s3.2.hist.12.3.2020.5000	feature_color	black
 s3.s3.2.hist.12.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.12.3.2020.5000	feature_order	1
 s3.s3.2.hist.12.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.12.3.2020.5000	feature_popup_title	value -> 23.5
 
-s3.s3.2.hist.12.3.2020.5000	feature_height_ratio	28.5
+s3.s3.2.hist.12.3.2020.5000	feature_height_ratio	33.25
 
 s3.s3.2.hist.12.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.12.3.2020.5000	feature_shape	rect
@@ -159,8 +172,9 @@ s3.s3.2.hist.13.3.2020.5000	feature_color	black
 s3.s3.2.hist.13.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.13.3.2020.5000	feature_order	1
 s3.s3.2.hist.13.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.13.3.2020.5000	feature_popup_title	value -> 23.57
 
-s3.s3.2.hist.13.3.2020.5000	feature_height_ratio	28.5
+s3.s3.2.hist.13.3.2020.5000	feature_height_ratio	33.915
 
 s3.s3.2.hist.13.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.13.3.2020.5000	feature_shape	rect
@@ -171,8 +185,9 @@ s3.s3.2.hist.14.3.2020.5000	feature_color	black
 s3.s3.2.hist.14.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.14.3.2020.5000	feature_order	1
 s3.s3.2.hist.14.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.14.3.2020.5000	feature_popup_title	value -> 22.26
 
-s3.s3.2.hist.14.3.2020.5000	feature_height_ratio	19
+s3.s3.2.hist.14.3.2020.5000	feature_height_ratio	21.47
 
 s3.s3.2.hist.14.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.14.3.2020.5000	feature_shape	rect
@@ -183,8 +198,9 @@ s3.s3.2.hist.15.3.2020.5000	feature_color	black
 s3.s3.2.hist.15.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.15.3.2020.5000	feature_order	1
 s3.s3.2.hist.15.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.15.3.2020.5000	feature_popup_title	value -> 22.76
 
-s3.s3.2.hist.15.3.2020.5000	feature_height_ratio	19
+s3.s3.2.hist.15.3.2020.5000	feature_height_ratio	26.22
 
 s3.s3.2.hist.15.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.15.3.2020.5000	feature_shape	rect
@@ -195,8 +211,9 @@ s3.s3.2.hist.16.3.2020.5000	feature_color	black
 s3.s3.2.hist.16.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.16.3.2020.5000	feature_order	1
 s3.s3.2.hist.16.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.16.3.2020.5000	feature_popup_title	value -> 22.04
 
-s3.s3.2.hist.16.3.2020.5000	feature_height_ratio	19
+s3.s3.2.hist.16.3.2020.5000	feature_height_ratio	19.38
 
 s3.s3.2.hist.16.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.16.3.2020.5000	feature_shape	rect
@@ -207,8 +224,9 @@ s3.s3.2.hist.17.3.2020.5000	feature_color	black
 s3.s3.2.hist.17.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.17.3.2020.5000	feature_order	1
 s3.s3.2.hist.17.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.17.3.2020.5000	feature_popup_title	value -> 27.65
 
-s3.s3.2.hist.17.3.2020.5000	feature_height_ratio	66.5
+s3.s3.2.hist.17.3.2020.5000	feature_height_ratio	72.675
 
 s3.s3.2.hist.17.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.17.3.2020.5000	feature_shape	rect
@@ -219,8 +237,9 @@ s3.s3.2.hist.18.3.2020.5000	feature_color	black
 s3.s3.2.hist.18.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.18.3.2020.5000	feature_order	1
 s3.s3.2.hist.18.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.18.3.2020.5000	feature_popup_title	value -> 25.42
 
-s3.s3.2.hist.18.3.2020.5000	feature_height_ratio	47.5
+s3.s3.2.hist.18.3.2020.5000	feature_height_ratio	51.49
 
 s3.s3.2.hist.18.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.18.3.2020.5000	feature_shape	rect
@@ -231,8 +250,9 @@ s3.s3.2.hist.19.3.2020.5000	feature_color	black
 s3.s3.2.hist.19.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.19.3.2020.5000	feature_order	1
 s3.s3.2.hist.19.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.19.3.2020.5000	feature_popup_title	value -> 24.16
 
-s3.s3.2.hist.19.3.2020.5000	feature_height_ratio	38
+s3.s3.2.hist.19.3.2020.5000	feature_height_ratio	39.52
 
 s3.s3.2.hist.19.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.19.3.2020.5000	feature_shape	rect
@@ -243,8 +263,9 @@ s3.s3.2.hist.20.3.2020.5000	feature_color	black
 s3.s3.2.hist.20.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.20.3.2020.5000	feature_order	1
 s3.s3.2.hist.20.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.20.3.2020.5000	feature_popup_title	value -> 26.56
 
-s3.s3.2.hist.20.3.2020.5000	feature_height_ratio	57
+s3.s3.2.hist.20.3.2020.5000	feature_height_ratio	62.32
 
 s3.s3.2.hist.20.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.20.3.2020.5000	feature_shape	rect
@@ -255,8 +276,9 @@ s3.s3.2.hist.21.3.2020.5000	feature_color	black
 s3.s3.2.hist.21.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.21.3.2020.5000	feature_order	1
 s3.s3.2.hist.21.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.21.3.2020.5000	feature_popup_title	value -> 24.14
 
-s3.s3.2.hist.21.3.2020.5000	feature_height_ratio	38
+s3.s3.2.hist.21.3.2020.5000	feature_height_ratio	39.33
 
 s3.s3.2.hist.21.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.21.3.2020.5000	feature_shape	rect
@@ -267,8 +289,9 @@ s3.s3.2.hist.22.3.2020.5000	feature_color	black
 s3.s3.2.hist.22.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.22.3.2020.5000	feature_order	1
 s3.s3.2.hist.22.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.22.3.2020.5000	feature_popup_title	value -> 27.03
 
-s3.s3.2.hist.22.3.2020.5000	feature_height_ratio	66.5
+s3.s3.2.hist.22.3.2020.5000	feature_height_ratio	66.785
 
 s3.s3.2.hist.22.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.22.3.2020.5000	feature_shape	rect
@@ -279,18 +302,27 @@ s3.s3.2.hist.23.3.2020.5000	feature_color	black
 s3.s3.2.hist.23.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.23.3.2020.5000	feature_order	1
 s3.s3.2.hist.23.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.23.3.2020.5000	feature_popup_title	value -> 26.86
 
-s3.s3.2.hist.23.3.2020.5000	feature_height_ratio	57
+s3.s3.2.hist.23.3.2020.5000	feature_height_ratio	65.17
 
 s3.s3.2.hist.23.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.23.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.23.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.23.3.2020.5000	feature_shift_y_unit	percent
-s3.s3.2.hist.24.3.2020.5000	display_feature_label	no
+s3.s3.2.hist.24.3.2020.5000	display_feature_label	yes
 s3.s3.2.hist.24.3.2020.5000	feature_color	black
 s3.s3.2.hist.24.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.24.3.2020.5000	feature_order	1
 s3.s3.2.hist.24.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.24.3.2020.5000	feature_popup_title	value -> 30.02
+s3.s3.2.hist.24.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.24.3.2020.5000	feature_label	30.02
+s3.s3.2.hist.24.3.2020.5000	label_text_anchor	middle
+s3.s3.2.hist.24.3.2020.5000	label_rotate_angle	0
+s3.s3.2.hist.24.3.2020.5000	feature_label_auto_angle_flag	0
+
+s3.s3.2.hist.24.3.2020.5000	feature_label_size	6
 
 s3.s3.2.hist.24.3.2020.5000	feature_height_ratio	95
 
@@ -298,13 +330,15 @@ s3.s3.2.hist.24.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.24.3.2020.5000	feature_shape	rect
 s3.s3.2.hist.24.3.2020.5000	feature_shift_y	-5
 s3.s3.2.hist.24.3.2020.5000	feature_shift_y_unit	percent
+s3.s3.2.hist.24.3.2020.5000	padding_feature_label	+0.01
 s3.s3.2.hist.25.3.2020.5000	display_feature_label	no
 s3.s3.2.hist.25.3.2020.5000	feature_color	black
 s3.s3.2.hist.25.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.25.3.2020.5000	feature_order	1
 s3.s3.2.hist.25.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.25.3.2020.5000	feature_popup_title	value -> 23.2
 
-s3.s3.2.hist.25.3.2020.5000	feature_height_ratio	28.5
+s3.s3.2.hist.25.3.2020.5000	feature_height_ratio	30.4
 
 s3.s3.2.hist.25.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.25.3.2020.5000	feature_shape	rect
@@ -315,8 +349,9 @@ s3.s3.2.hist.26.3.2020.5000	feature_color	black
 s3.s3.2.hist.26.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.26.3.2020.5000	feature_order	1
 s3.s3.2.hist.26.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.26.3.2020.5000	feature_popup_title	value -> 24.53
 
-s3.s3.2.hist.26.3.2020.5000	feature_height_ratio	38
+s3.s3.2.hist.26.3.2020.5000	feature_height_ratio	43.035
 
 s3.s3.2.hist.26.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.26.3.2020.5000	feature_shape	rect
@@ -327,8 +362,9 @@ s3.s3.2.hist.27.3.2020.5000	feature_color	black
 s3.s3.2.hist.27.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.27.3.2020.5000	feature_order	1
 s3.s3.2.hist.27.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.27.3.2020.5000	feature_popup_title	value -> 23.56
 
-s3.s3.2.hist.27.3.2020.5000	feature_height_ratio	28.5
+s3.s3.2.hist.27.3.2020.5000	feature_height_ratio	33.82
 
 s3.s3.2.hist.27.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.27.3.2020.5000	feature_shape	rect
@@ -339,8 +375,9 @@ s3.s3.2.hist.28.3.2020.5000	feature_color	black
 s3.s3.2.hist.28.3.2020.5000	feature_opacity	1
 s3.s3.2.hist.28.3.2020.5000	feature_order	1
 s3.s3.2.hist.28.3.2020.5000	pos_feature_label	medium_up
+s3.s3.2.hist.28.3.2020.5000	feature_popup_title	value -> 25.29
 
-s3.s3.2.hist.28.3.2020.5000	feature_height_ratio	47.5
+s3.s3.2.hist.28.3.2020.5000	feature_height_ratio	50.255
 
 s3.s3.2.hist.28.3.2020.5000	feature_height_unit	percent
 s3.s3.2.hist.28.3.2020.5000	feature_shape	rect
