--- a/example/s4.s4000.2.1.ytick.setting.conf
+++ b/example/s4.s4000.2.1.ytick.setting.conf
@@ -18,7 +18,7 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick0.hgrid	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick0.hgrid	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick0.hgrid	display_feature_label	no
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick0.hgrid	feature_opacity	0.3
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick0.hgrid	feature_shift_y	+55.18
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick0.hgrid	feature_shift_y	+100.02
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick0.hgrid	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick0.hgrid	feature_color	green
 
@@ -27,10 +27,10 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick0	feature_height_ratio	0.2
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick0	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick0	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick0	feature_shift_x	3.9
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick0	feature_shift_y	+55.1
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick0	feature_shift_y	+100.1
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick0	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick0	display_feature_label	yes
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick0	feature_label	1
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick0	feature_label	30
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick0	pos_feature_label	right_medium
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick0	label_rotate_angle	0
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick0	feature_label_size	5
@@ -48,7 +48,7 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick1.hgrid	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick1.hgrid	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick1.hgrid	display_feature_label	no
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick1.hgrid	feature_opacity	0.3
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick1.hgrid	feature_shift_y	+50.6345454545455
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick1.hgrid	feature_shift_y	+95.52
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick1.hgrid	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick1.hgrid	feature_color	green
 
@@ -57,10 +57,10 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick1	feature_height_ratio	0.2
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick1	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick1	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick1	feature_shift_x	3.9
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick1	feature_shift_y	+50.5545454545455
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick1	feature_shift_y	+95.6
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick1	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick1	display_feature_label	yes
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick1	feature_label	-9
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick1	feature_label	40
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick1	pos_feature_label	right_medium
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick1	label_rotate_angle	0
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick1	feature_label_size	5
@@ -78,7 +78,7 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick2.hgrid	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick2.hgrid	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick2.hgrid	display_feature_label	no
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick2.hgrid	feature_opacity	0.3
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick2.hgrid	feature_shift_y	+46.0890909090909
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick2.hgrid	feature_shift_y	+91.02
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick2.hgrid	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick2.hgrid	feature_color	green
 
@@ -87,10 +87,10 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick2	feature_height_ratio	0.2
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick2	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick2	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick2	feature_shift_x	3.9
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick2	feature_shift_y	+46.0090909090909
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick2	feature_shift_y	+91.1
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick2	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick2	display_feature_label	yes
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick2	feature_label	-19
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick2	feature_label	50
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick2	pos_feature_label	right_medium
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick2	label_rotate_angle	0
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick2	feature_label_size	5
@@ -108,7 +108,7 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick3.hgrid	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick3.hgrid	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick3.hgrid	display_feature_label	no
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick3.hgrid	feature_opacity	0.3
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick3.hgrid	feature_shift_y	+41.5436363636364
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick3.hgrid	feature_shift_y	+86.52
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick3.hgrid	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick3.hgrid	feature_color	green
 
@@ -117,10 +117,10 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick3	feature_height_ratio	0.2
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick3	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick3	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick3	feature_shift_x	3.9
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick3	feature_shift_y	+41.4636363636364
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick3	feature_shift_y	+86.6
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick3	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick3	display_feature_label	yes
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick3	feature_label	-29
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick3	feature_label	60
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick3	pos_feature_label	right_medium
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick3	label_rotate_angle	0
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick3	feature_label_size	5
@@ -138,7 +138,7 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick4.hgrid	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick4.hgrid	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick4.hgrid	display_feature_label	no
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick4.hgrid	feature_opacity	0.3
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick4.hgrid	feature_shift_y	+36.9981818181818
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick4.hgrid	feature_shift_y	+82.02
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick4.hgrid	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick4.hgrid	feature_color	green
 
@@ -147,10 +147,10 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick4	feature_height_ratio	0.2
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick4	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick4	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick4	feature_shift_x	3.9
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick4	feature_shift_y	+36.9181818181818
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick4	feature_shift_y	+82.1
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick4	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick4	display_feature_label	yes
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick4	feature_label	-39
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick4	feature_label	70
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick4	pos_feature_label	right_medium
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick4	label_rotate_angle	0
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick4	feature_label_size	5
@@ -168,7 +168,7 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick5.hgrid	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick5.hgrid	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick5.hgrid	display_feature_label	no
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick5.hgrid	feature_opacity	0.3
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick5.hgrid	feature_shift_y	+32.4527272727273
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick5.hgrid	feature_shift_y	+77.52
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick5.hgrid	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick5.hgrid	feature_color	green
 
@@ -177,10 +177,10 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick5	feature_height_ratio	0.2
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick5	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick5	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick5	feature_shift_x	3.9
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick5	feature_shift_y	+32.3727272727273
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick5	feature_shift_y	+77.6
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick5	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick5	display_feature_label	yes
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick5	feature_label	-49
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick5	feature_label	80
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick5	pos_feature_label	right_medium
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick5	label_rotate_angle	0
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick5	feature_label_size	5
@@ -198,7 +198,7 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick6.hgrid	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick6.hgrid	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick6.hgrid	display_feature_label	no
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick6.hgrid	feature_opacity	0.3
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick6.hgrid	feature_shift_y	+27.9072727272727
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick6.hgrid	feature_shift_y	+73.02
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick6.hgrid	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick6.hgrid	feature_color	green
 
@@ -207,10 +207,10 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick6	feature_height_ratio	0.2
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick6	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick6	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick6	feature_shift_x	3.9
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick6	feature_shift_y	+27.8272727272727
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick6	feature_shift_y	+73.1
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick6	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick6	display_feature_label	yes
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick6	feature_label	-59
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick6	feature_label	90
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick6	pos_feature_label	right_medium
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick6	label_rotate_angle	0
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick6	feature_label_size	5
@@ -228,7 +228,7 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick7.hgrid	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick7.hgrid	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick7.hgrid	display_feature_label	no
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick7.hgrid	feature_opacity	0.3
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick7.hgrid	feature_shift_y	+23.3618181818182
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick7.hgrid	feature_shift_y	+68.52
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick7.hgrid	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick7.hgrid	feature_color	green
 
@@ -237,10 +237,10 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick7	feature_height_ratio	0.2
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick7	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick7	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick7	feature_shift_x	3.9
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick7	feature_shift_y	+23.2818181818182
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick7	feature_shift_y	+68.6
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick7	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick7	display_feature_label	yes
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick7	feature_label	-69
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick7	feature_label	100
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick7	pos_feature_label	right_medium
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick7	label_rotate_angle	0
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick7	feature_label_size	5
@@ -258,7 +258,7 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick8.hgrid	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick8.hgrid	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick8.hgrid	display_feature_label	no
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick8.hgrid	feature_opacity	0.3
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick8.hgrid	feature_shift_y	+18.8163636363636
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick8.hgrid	feature_shift_y	+64.02
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick8.hgrid	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick8.hgrid	feature_color	green
 
@@ -267,10 +267,10 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick8	feature_height_ratio	0.2
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick8	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick8	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick8	feature_shift_x	3.9
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick8	feature_shift_y	+18.7363636363636
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick8	feature_shift_y	+64.1
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick8	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick8	display_feature_label	yes
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick8	feature_label	-79
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick8	feature_label	110
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick8	pos_feature_label	right_medium
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick8	label_rotate_angle	0
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick8	feature_label_size	5
@@ -288,7 +288,7 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick9.hgrid	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick9.hgrid	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick9.hgrid	display_feature_label	no
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick9.hgrid	feature_opacity	0.3
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick9.hgrid	feature_shift_y	+14.2709090909091
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick9.hgrid	feature_shift_y	+59.52
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick9.hgrid	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick9.hgrid	feature_color	green
 
@@ -297,10 +297,10 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick9	feature_height_ratio	0.2
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick9	feature_height_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick9	feature_shape	rect
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick9	feature_shift_x	3.9
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick9	feature_shift_y	+14.1909090909091
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick9	feature_shift_y	+59.6
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick9	feature_shift_y_unit	percent
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick9	display_feature_label	yes
-s4.s4000.2.1.9609.hist.ytickbackbone1.tick9	feature_label	-89
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick9	feature_label	120
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick9	pos_feature_label	right_medium
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick9	label_rotate_angle	0
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick9	feature_label_size	5
@@ -310,4 +310,34 @@ s4.s4000.2.1.9609.hist.ytickbackbone1.tick9	feature_label_auto_angle_flag	0
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick9	feature_color	green
 
 s4.s4000.2.1.9609.hist.ytickbackbone1.tick9	feature_opacity	0.6
+
+
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10.hgrid	feature_height_ratio	0.04
+
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10.hgrid	feature_height_unit	percent
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10.hgrid	feature_shape	rect
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10.hgrid	display_feature_label	no
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10.hgrid	feature_opacity	0.3
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10.hgrid	feature_shift_y	+55.02
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10.hgrid	feature_shift_y_unit	percent
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10.hgrid	feature_color	green
+
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10	feature_height_ratio	0.2
+
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10	feature_height_unit	percent
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10	feature_shape	rect
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10	feature_shift_x	3.9
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10	feature_shift_y	+55.1
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10	feature_shift_y_unit	percent
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10	display_feature_label	yes
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10	feature_label	130
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10	pos_feature_label	right_medium
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10	label_rotate_angle	0
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10	feature_label_size	5
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10	padding_feature_label	1.5
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10	feature_label_auto_angle_flag	0
+
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10	feature_color	green
+
+s4.s4000.2.1.9609.hist.ytickbackbone1.tick10	feature_opacity	0.6
 
