--- a/example/main.7.conf
+++ b/example/main.7.conf
@@ -106,7 +106,9 @@ synteny = order->1,query->s1:target->s2,../data/s1.mapto.s2.paf.gz,paf,quadrilat
 #synteny = order->1,query->s2:target->s3,../data/s2.mapto.s3.paf.gz,paf,quadrilateral,forward->yellow->opacity1,reverse->blue->opacity1
 
 synteny = order->0,query->s2:target->s4,../data/s2.mapto.s4.paf.gz,paf,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3
-#synteny = order->0,query->s2:target->s4,../data/s2.mapto.s4.blast.m6.gz,blast,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3
+#synteny = order->0,query->s2:target->s4,../data/s2.mapto.s4.blast.m6.gz,blast_m8,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3
+#synteny = order->0,query->s2:target->s4,../data/s2.mapto.s4.mummer4.gz,mummer4,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3
+#synteny = order->0,query->s2:target->s4,../data/s2.mapto.s4.blatpsl.gz,blat_psl,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3	blat_block_show->1:1
 
 hist_scatter_line = hist,0,s4,s4000,0,50,../data/s4.seq.sam.sorted.bam:../data/s4.seq,color->green:opacity->1,-55->-100,ytick_flag,30->130->10,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.6:0.6:0.2:0.2,5:5	ylabel->illuminate read depth,gap:150bp,fontsize:13,color:black
 #reads_mapping=short_reads,1,s4,s4000,0,../data/s4.seq.sam.sorted.bam:../data/s4.seq,stack,-5->-50,0,10->40->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15,0:10:40	ylabel->illuminate read mapping,gap:150bp,fontsize:10,color:green
