--- a/example/main.2.conf
+++ b/example/main.2.conf
@@ -11,7 +11,7 @@ reads_mapping=long_reads,1,pO83_CORR.indel,NC_017659.1.fake,0,../data/NC_017659.
 
 tracks_shift_y=pO83_CORR,0,+1:-0
 
-synteny = order->0->1,query->pO83_CORR.indel->NC_017659.1.fake:target->pO83_CORR->NC_017659.1,../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.blast.m6,blast_m8,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3,sort->1
+synteny = order->0->1,query->pO83_CORR.indel:target->pO83_CORR,../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.blast.m6,blast_m8,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3,sort->1
 allow_feature_out_of_list=synteny
 display_segment_name=yes,center,shift_y:+2,fontsize:10,color:black,order:5 # yes or no , for scaffold name
 
