--- a/example/main.1.conf
+++ b/example/main.1.conf
@@ -4,7 +4,7 @@
 #reads_mapping=short_reads,1,aa,s160,0,S20K.s160.155612.178608.sort.bam:/zfssz2/BC_COM_P5/USER/lixiuli/greenalgae/00.assembly/Mesotaenium_endlicherianum_genome.fa,rainbow:color->blue:opacity->0.5:cross_link_width_ellipse->0.05,10->80,0,10->40->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15,0:10:40
 #hist_scatter_line = hist,1,zz,s160,0,20,S20K.sort.bam:/zfssz2/BC_COM_P5/USER/lixiuli/greenalgae/00.assembly/Mesotaenium_endlicherianum_genome.fa,color->green:opacity->1,85->110,ytick_flag,1->25->4,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.6:0.6:0.2:0.2,5:5	ylabel->illuminate read depth,gap:150bp,fontsize:13,color:black
 #tracks_shift_y=zz,0,+0:-0.5
-synteny = order->0->1,query->pO83_CORR.1:target->pO83_CORR.2,../data/NC_017659.1.fa.to.NC_017659.1.fa.blast.m6,blast_m8,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3,sort->1
+synteny = order->2->3,query->pO83_CORR.indel:target->pO83_CORR,../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.blast.m6,blast_m8,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3,sort->1
 
 
 
