--- a/example/out2.pO83_CORR.indel.out2.synteny.setting.conf
+++ b/example/out2.pO83_CORR.indel.out2.synteny.setting.conf
@@ -1,24 +1,28 @@
 pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+	feature_shape	rect
 pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+	feature_height_ratio	1
 pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+	feature_height_unit	backbone
-pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+	feature_opacity	0
+pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+	feature_opacity	0.5
+pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+	feature_color	orange
 pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+	display_feature_label	no
 pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+	feature_order	0.25
 pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+	feature_shape	rect
 pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+	feature_height_ratio	1
 pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+	feature_height_unit	backbone
-pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+	feature_opacity	0
+pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+	feature_opacity	0.5
+pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+	feature_color	orange
 pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+	display_feature_label	no
 pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+	feature_order	0.5
 pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+	feature_shape	rect
 pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+	feature_height_ratio	1
 pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+	feature_height_unit	backbone
-pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+	feature_opacity	0
+pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+	feature_opacity	0.5
+pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+	feature_color	orange
 pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+	display_feature_label	no
 pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+	feature_order	0.75
 pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+	feature_shape	rect
 pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+	feature_height_ratio	1
 pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+	feature_height_unit	backbone
-pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+	feature_opacity	0
+pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+	feature_opacity	0.5
+pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+	feature_color	orange
 pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+	display_feature_label	no
 pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+	feature_order	1
