--- a/example/main.1.conf
+++ b/example/main.1.conf
@@ -6,6 +6,7 @@
 #tracks_shift_y=zz,0,+0:-0.5
 synteny = order->2->3,query->pO83_CORR.indel:target->pO83_CORR,../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.blast.m6,blast_m8,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3,sort->1
 
+display_segment_name=yes,center,shift_y:+2,fontsize:10,color:black,order:5,rotate:0
 
 
 
