--- a/example/out1.synteny.setting.conf
+++ b/example/out1.synteny.setting.conf
@@ -1,56 +1,56 @@
-pO83_CORR.NC_017659.1.5460.147060.1.+	feature_shape	rect
-pO83_CORR.NC_017659.1.5460.147060.1.+	feature_height_ratio	1
-pO83_CORR.NC_017659.1.5460.147060.1.+	feature_height_unit	backbone
-pO83_CORR.NC_017659.1.5460.147060.1.+	feature_color	orange
-pO83_CORR.NC_017659.1.5460.147060.1.+	feature_opacity	0.5
-pO83_CORR.NC_017659.1.5460.147060.1.+	display_feature_label	no
-pO83_CORR.NC_017659.1.5460.147060.1.+	feature_order	2.25
-pO83_CORR.NC_017659.1.2101.5468.1.+	feature_shape	rect
-pO83_CORR.NC_017659.1.2101.5468.1.+	feature_height_ratio	1
-pO83_CORR.NC_017659.1.2101.5468.1.+	feature_height_unit	backbone
-pO83_CORR.NC_017659.1.2101.5468.1.+	feature_color	orange
-pO83_CORR.NC_017659.1.2101.5468.1.+	feature_opacity	0.5
-pO83_CORR.NC_017659.1.2101.5468.1.+	display_feature_label	no
-pO83_CORR.NC_017659.1.2101.5468.1.+	feature_order	2.5
-pO83_CORR.NC_017659.1.1.1898.1.+	feature_shape	rect
-pO83_CORR.NC_017659.1.1.1898.1.+	feature_height_ratio	1
-pO83_CORR.NC_017659.1.1.1898.1.+	feature_height_unit	backbone
-pO83_CORR.NC_017659.1.1.1898.1.+	feature_color	orange
-pO83_CORR.NC_017659.1.1.1898.1.+	feature_opacity	0.5
-pO83_CORR.NC_017659.1.1.1898.1.+	display_feature_label	no
-pO83_CORR.NC_017659.1.1.1898.1.+	feature_order	2.75
-pO83_CORR.NC_017659.1.1891.2100.1.+	feature_shape	rect
-pO83_CORR.NC_017659.1.1891.2100.1.+	feature_height_ratio	1
-pO83_CORR.NC_017659.1.1891.2100.1.+	feature_height_unit	backbone
-pO83_CORR.NC_017659.1.1891.2100.1.+	feature_color	orange
-pO83_CORR.NC_017659.1.1891.2100.1.+	feature_opacity	0.5
-pO83_CORR.NC_017659.1.1891.2100.1.+	display_feature_label	no
-pO83_CORR.NC_017659.1.1891.2100.1.+	feature_order	3
-pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+	feature_shape	rect
-pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+	feature_height_ratio	1
-pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+	feature_height_unit	backbone
-pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+	feature_opacity	0.5
-pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+	feature_color	orange
-pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+	display_feature_label	no
-pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+	feature_order	2.25
-pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+	feature_shape	rect
-pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+	feature_height_ratio	1
-pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+	feature_height_unit	backbone
-pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+	feature_opacity	0.5
-pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+	feature_color	orange
-pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+	display_feature_label	no
-pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+	feature_order	2.5
-pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+	feature_shape	rect
-pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+	feature_height_ratio	1
-pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+	feature_height_unit	backbone
-pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+	feature_opacity	0.5
-pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+	feature_color	orange
-pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+	display_feature_label	no
-pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+	feature_order	2.75
-pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+	feature_shape	rect
-pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+	feature_height_ratio	1
-pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+	feature_height_unit	backbone
-pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+	feature_opacity	0.5
-pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+	feature_color	orange
-pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+	display_feature_label	no
-pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+	feature_order	3
+pO83_CORR.NC_017659.1.5460.147060.1.+.1	feature_shape	rect
+pO83_CORR.NC_017659.1.5460.147060.1.+.1	feature_height_ratio	1
+pO83_CORR.NC_017659.1.5460.147060.1.+.1	feature_height_unit	backbone
+pO83_CORR.NC_017659.1.5460.147060.1.+.1	feature_color	orange
+pO83_CORR.NC_017659.1.5460.147060.1.+.1	feature_opacity	0.5
+pO83_CORR.NC_017659.1.5460.147060.1.+.1	display_feature_label	no
+pO83_CORR.NC_017659.1.5460.147060.1.+.1	feature_order	2.25
+pO83_CORR.NC_017659.1.2101.5468.1.+.1	feature_shape	rect
+pO83_CORR.NC_017659.1.2101.5468.1.+.1	feature_height_ratio	1
+pO83_CORR.NC_017659.1.2101.5468.1.+.1	feature_height_unit	backbone
+pO83_CORR.NC_017659.1.2101.5468.1.+.1	feature_color	orange
+pO83_CORR.NC_017659.1.2101.5468.1.+.1	feature_opacity	0.5
+pO83_CORR.NC_017659.1.2101.5468.1.+.1	display_feature_label	no
+pO83_CORR.NC_017659.1.2101.5468.1.+.1	feature_order	2.5
+pO83_CORR.NC_017659.1.1.1898.1.+.1	feature_shape	rect
+pO83_CORR.NC_017659.1.1.1898.1.+.1	feature_height_ratio	1
+pO83_CORR.NC_017659.1.1.1898.1.+.1	feature_height_unit	backbone
+pO83_CORR.NC_017659.1.1.1898.1.+.1	feature_color	orange
+pO83_CORR.NC_017659.1.1.1898.1.+.1	feature_opacity	0.5
+pO83_CORR.NC_017659.1.1.1898.1.+.1	display_feature_label	no
+pO83_CORR.NC_017659.1.1.1898.1.+.1	feature_order	2.75
+pO83_CORR.NC_017659.1.1891.2100.1.+.1	feature_shape	rect
+pO83_CORR.NC_017659.1.1891.2100.1.+.1	feature_height_ratio	1
+pO83_CORR.NC_017659.1.1891.2100.1.+.1	feature_height_unit	backbone
+pO83_CORR.NC_017659.1.1891.2100.1.+.1	feature_color	orange
+pO83_CORR.NC_017659.1.1891.2100.1.+.1	feature_opacity	0.5
+pO83_CORR.NC_017659.1.1891.2100.1.+.1	display_feature_label	no
+pO83_CORR.NC_017659.1.1891.2100.1.+.1	feature_order	3
+pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+.1	feature_shape	rect
+pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+.1	feature_height_ratio	1
+pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+.1	feature_height_unit	backbone
+pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+.1	feature_opacity	0.5
+pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+.1	feature_color	orange
+pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+.1	display_feature_label	no
+pO83_CORR.indel.NC_017659.1.fake.5460.147060.1.+.1	feature_order	2.25
+pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+.1	feature_shape	rect
+pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+.1	feature_height_ratio	1
+pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+.1	feature_height_unit	backbone
+pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+.1	feature_opacity	0.5
+pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+.1	feature_color	orange
+pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+.1	display_feature_label	no
+pO83_CORR.indel.NC_017659.1.fake.1891.5257.1.+.1	feature_order	2.5
+pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+.1	feature_shape	rect
+pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+.1	feature_height_ratio	1
+pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+.1	feature_height_unit	backbone
+pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+.1	feature_opacity	0.5
+pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+.1	feature_color	orange
+pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+.1	display_feature_label	no
+pO83_CORR.indel.NC_017659.1.fake.1.1898.1.+.1	feature_order	2.75
+pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+.1	feature_shape	rect
+pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+.1	feature_height_ratio	1
+pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+.1	feature_height_unit	backbone
+pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+.1	feature_opacity	0.5
+pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+.1	feature_color	orange
+pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+.1	display_feature_label	no
+pO83_CORR.indel.NC_017659.1.fake.5251.5460.1.+.1	feature_order	3
