--- a/example/out3.chr14.out3.reads_mapping.setting.conf
+++ b/example/out3.chr14.out3.reads_mapping.setting.conf
@@ -10174,3 +10174,49 @@ HISEQ1:23:H9UD5ADXX:2:2206:1956:89188.14.66901400.66903400.read1.cr.-1.148revers
 HISEQ1:23:H9UD5ADXX:2:2206:1956:89188.14.66901400.66903400.read1.cr.-1.148reverse.-1.4	feature_shift_y_unit	percent
 HISEQ1:23:H9UD5ADXX:2:2206:1956:89188.14.66901400.66903400.read1.cr.-1.148reverse.-1.4	feature_order	-1
 HISEQ1:23:H9UD5ADXX:2:2206:1956:89188.14.66901400.66903400.read1.cr.-1.148reverse.-1.4	feature_opacity	0.6
+chr14.14.1.66901400.66903400.5.vcf.ylabel+	feature_label_color	green
+chr14.14.1.66901400.66903400.5.vcf.ylabel+	feature_shift_x	65
+chr14.14.1.66901400.66903400.5.vcf.ylabel+	feature_height_ratio	0
+chr14.14.1.66901400.66903400.5.vcf.ylabel+	feature_height_unit	percent
+chr14.14.1.66901400.66903400.5.vcf.ylabel+	feature_label_size	15
+chr14.14.1.66901400.66903400.5.vcf.ylabel+	feature_shift_y	-5.5
+chr14.14.1.66901400.66903400.5.vcf.ylabel+	feature_shift_y_unit	percent
+chr14.14.1.66901400.66903400.5.vcf.ylabel+	feature_label	vcf
+chr14.14.1.66901400.66903400.5.vcf.ylabel+	display_feature_label	yes
+chr14.14.1.66901400.66903400.5.vcf.ylabel+	pos_feature_label	right_low
+chr14.14.1.66901400.66903400.5.vcf.ylabel+	feature_label_auto_angle_flag	0
+chr14.14.1.66901400.66903400.5.vcf.ylabel+	feature_color	white
+chr14.14.1.66901400.66903400.5.vcf.ylabel+	feature_shape	rect
+chr14.14.1.66901400.66903400.5.vcf.ylabel+	label_text_alignment_baseline	middle
+chr14.14.vcf.66901580.C.to.T.rs1350330.5	feature_color	Purple
+chr14.14.vcf.66901580.C.to.T.rs1350330.5	feature_label_color	Purple
+chr14.14.vcf.66901580.C.to.T.rs1350330.5	feature_shape	rect
+chr14.14.vcf.66901580.C.to.T.rs1350330.5	feature_height_ratio	4.2
+chr14.14.vcf.66901580.C.to.T.rs1350330.5	feature_height_unit	percent
+chr14.14.vcf.66901580.C.to.T.rs1350330.5	feature_shift_y	-2
+chr14.14.vcf.66901580.C.to.T.rs1350330.5	feature_shift_y_unit	percent
+chr14.14.vcf.66901580.C.to.T.rs1350330.5	feature_opacity	1
+chr14.14.vcf.66901580.C.to.T.rs1350330.5	feature_label	66901580:C.to.T
+chr14.14.vcf.66901580.C.to.T.rs1350330.5	display_feature_label	yes
+chr14.14.vcf.66901580.C.to.T.rs1350330.5	padding_feature_label	0.1
+chr14.14.vcf.66901580.C.to.T.rs1350330.5	pos_feature_label	medium_up
+chr14.14.vcf.66901580.C.to.T.rs1350330.5	feature_label_auto_angle_flag	0
+chr14.14.vcf.66901580.C.to.T.rs1350330.5	label_rotate_angle	-15
+chr14.14.vcf.66901580.C.to.T.rs1350330.5	feature_label_size	2
+chr14.14.vcf.66901580.C.to.T.rs1350330.5	feature_popup_title	mutation: 14:66901580:rs1350330: C -> T;qual=50,PASS platforms=4;platformnames=Illumina,CG,10X,Solid;datasets=6;datasetnames=HiSeqPE300x,CGnormal,HiSeq250x250,10XChromium,HiSeqMatePair,SolidSE75bp;callsets=9;callsetnames=HiSeqPE300xGATK,CGnormal,HiSeqPE300xfreebayes,HiSeq250x250GATK,HiSeq250x250freebayes,10XGATKhaplo,HiSeqMatePairGATK,HiSeqMatePairfreebayes,SolidSE75GATKHC;datasetsmissingcall=IonExome;callable=CS_HiSeqPE300xGATK_callable,CS_CGnormal_callable,CS_HiSeqPE300xfreebayes_callable,CS_HiSeq250x250GATK_callable GT:DP:ADALL:AD:GQ:IGT:IPS:PS 1|0:1095:214,210:251,267:1323:0/1:.:PATMAT
+chr14.14.vcf.66903247.A.to.G.rs933039.5	feature_color	Purple
+chr14.14.vcf.66903247.A.to.G.rs933039.5	feature_label_color	Purple
+chr14.14.vcf.66903247.A.to.G.rs933039.5	feature_shape	rect
+chr14.14.vcf.66903247.A.to.G.rs933039.5	feature_height_ratio	4.2
+chr14.14.vcf.66903247.A.to.G.rs933039.5	feature_height_unit	percent
+chr14.14.vcf.66903247.A.to.G.rs933039.5	feature_shift_y	-2
+chr14.14.vcf.66903247.A.to.G.rs933039.5	feature_shift_y_unit	percent
+chr14.14.vcf.66903247.A.to.G.rs933039.5	feature_opacity	1
+chr14.14.vcf.66903247.A.to.G.rs933039.5	feature_label	66903247:A.to.G
+chr14.14.vcf.66903247.A.to.G.rs933039.5	display_feature_label	yes
+chr14.14.vcf.66903247.A.to.G.rs933039.5	padding_feature_label	0.1
+chr14.14.vcf.66903247.A.to.G.rs933039.5	pos_feature_label	medium_up
+chr14.14.vcf.66903247.A.to.G.rs933039.5	feature_label_auto_angle_flag	0
+chr14.14.vcf.66903247.A.to.G.rs933039.5	label_rotate_angle	-15
+chr14.14.vcf.66903247.A.to.G.rs933039.5	feature_label_size	2
+chr14.14.vcf.66903247.A.to.G.rs933039.5	feature_popup_title	mutation: 14:66903247:rs933039: A -> G;qual=50,PASS platforms=4;platformnames=Illumina,CG,10X,Solid;datasets=6;datasetnames=HiSeqPE300x,CGnormal,HiSeq250x250,10XChromium,HiSeqMatePair,SolidSE75bp;callsets=9;callsetnames=HiSeqPE300xGATK,CGnormal,HiSeqPE300xfreebayes,HiSeq250x250GATK,HiSeq250x250freebayes,10XGATKhaplo,HiSeqMatePairGATK,HiSeqMatePairfreebayes,SolidSE75GATKHC;datasetsmissingcall=IonExome;callable=CS_HiSeqPE300xGATK_callable,CS_CGnormal_callable,CS_HiSeqPE300xfreebayes_callable,CS_HiSeq250x250GATK_callable GT:DP:ADALL:AD:GQ:IGT:IPS:PS 1|0:1059:206,182:248,242:1139:0/1:.:PATMAT
