--- a/example/main.1.conf
+++ b/example/main.1.conf
@@ -1,9 +1,9 @@
 
 ###############################----This Is wanted, 如果要画read mapping下面参数是必须的----##############################
 
-#reads_mapping=short_reads,1,aa,s160,0,S20K.s160.155612.178608.sort.bam:/zfssz2/BC_COM_P5/USER/lixiuli/greenalgae/00.assembly/Mesotaenium_endlicherianum_genome.fa,rainbow:color->blue:opacity->0.5:cross_link_width_ellipse->0.05,10->80,0,10->40->3,ytick_label_text,0,green:black,1:1,2:6:0.2:0.1,15:15,0:10:40
-#hist_scatter_line = hist,1,zz,s160,0,20,S20K.sort.bam:/zfssz2/BC_COM_P5/USER/lixiuli/greenalgae/00.assembly/Mesotaenium_endlicherianum_genome.fa,color->green:opacity->1,85->110,ytick_flag,1->25->4,ytick_label_text,hgrid_flag,green:green,0.6:0.3,0.6:0.6:0.2:0.2,5:5	ylabel->illuminate read depth,gap:150bp,fontsize:13,color:black
-#tracks_shift_y=zz,0,+0:-0.5
+
+hist_scatter_line = brand,3,pO83_CORR,NC_017659.1,0,20,../data/base_brand.txt:../data/NC_017659.1.fa,color->green:opacity->1,0->10,0,1->25->4,ytick_label_text,0,green:green,0.6:0.3,0.6:0.6:0.2:0.2,5:5	ylabel->ref base,gap:60bp,fontsize:13,color:black	start_end_xaxis->1:7060
+
 synteny = order->2->3,query->pO83_CORR.indel:target->pO83_CORR,../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.blast.m6,blast_m8,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3,sort->1
 
 display_segment_name=yes,center,shift_y:+2,fontsize:10,color:black,order:5,rotate:0
