--- a/example/main.6.conf
+++ b/example/main.6.conf
@@ -2,13 +2,14 @@
 ###############################----This Is wanted, 如果要画read mapping下面参数是必须的----##############################
 
 synteny = order->0->1,query->pO83_CORR.indel:target->pO83_CORR,../data/NC_017659.1.indel.fa.to.NC_017659.1.fa.blast.m6,blast_m8,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3,sort->1
-synteny = order->0->1,query->pO83_CORR.indel:target->pO83_CORR.indel.reverse,../data/NC_017659.1.indel.fa.to.self.m6,blast_m8,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3,sort->1
+synteny = order->0->1,query->pO83_CORR.indel.twin:target->pO83_CORR.indel.reverse,../data/NC_017659.1.indel.fa.to.self.m6,blast_m8,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3,sort->1
+synteny = order->0->1,query->pO83_CORR.indel.twin:target->pO83_CORR.indel,../data/NC_017659.1.indel.fa.to.self.m6,blast_m8,quadrilateral,forward->orange->opacity0.5,reverse->blue->opacity0.7,cross_link_shift_y->+3:-3,sort->1
 
 
 tracks_block_reverse=pO83_CORR.indel.reverse,0;
 feature_id_is_unique = no
 display_segment_name=yes,center,shift_y:+2,fontsize:6,color:black,order:5,rotate:0
-
+display_segment_strand=5:5",3:3"
 
 
 
