support download modified svg to file in browser

--- a/example/main.7.conf
+++ b/example/main.7.conf
@@ -5,7 +5,7 @@ tracks_block_reverse=pO83_CORR5,0;
 #feature_id_is_unique = no
 display_segment_name=yes,center,shift_y:+2,fontsize:6,color:black,order:5,rotate:0
 display_segment_strand=5:5',3:3',color:black,fontsize:15
-
+sample_name_font_size_default = 20
 
 
 
