--- a/example/feature.color.label.7.conf
+++ b/example/feature.color.label.7.conf
@@ -15,3 +15,13 @@ gene4538	pos_feature_label	medium_medium
 gene4538	label_text_anchor	middle
 gene4538	feature_shape	ellipse
 gene4538	y_margin_feature_label	0
+
+gene4549	feature_color	red
+gene4549	legend_label	gene4549.lenged
+gene4549	legend_position	baseline
+
+
+gene4559	feature_color	black
+gene4559	feature_opacity	0.6
+gene4559	legend_label	gene4559.lengend
+gene4559	legend_position	baseline
