--- a/example/main.7.conf
+++ b/example/main.7.conf
@@ -93,7 +93,8 @@ sample_name_font_size_default = 12
 
 
 # legend
-display_legend=yes # yes or other
+display_legend= no # yes or other
+legend_position = right # baseline or right
 legend_font_size = 15 #legend中文字字体大小
 legend_height_ratio = 0.7 # compare with feature height
 legend_width_margin = 0.15 # legends左右两侧的margin
